[project]
name = "spec-pdf-to-excel-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.9",
    "ghostscript>=0.8.1",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "streamlit>=1.56.0",
    "xlsxwriter>=3.2.9",
]
